[package]
name = "Pass_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "Pass_Rust"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.12.0"
pyo3 = "0.19.0"
rand = "0.8.5"
serde_json = "1.0.111"
